mgx2 release update

--- a/guide/node10.html
+++ b/guide/node10.html
@@ -23,26 +23,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html274"
+<A NAME="tex2html275"
   HREF="node11.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html270"
+<A NAME="tex2html271"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html264"
+<A NAME="tex2html265"
   HREF="node9.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html272"
+<A NAME="tex2html273"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html275"
+<B> Next:</B> <A NAME="tex2html276"
   HREF="node11.html">MGX roles</A>
-<B> Up:</B> <A NAME="tex2html271"
+<B> Up:</B> <A NAME="tex2html272"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html265"
+<B> Previous:</B> <A NAME="tex2html266"
   HREF="node9.html">Using the MGX application</A>
- &nbsp; <B>  <A NAME="tex2html273"
+ &nbsp; <B>  <A NAME="tex2html274"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -54,11 +54,10 @@ Obtaining a MGX project</A>
 
 <P>
 Currently, there is no way to automatically create new MGX projects. If you would like to
-analyse your data using MGX, send a mail to the MGX team, which can be contacted at 
-<a href="mailto:mgx@computational.bio.Uni-Giessen.DE">mgx@computational.bio.Uni-Giessen.DE</a>. MGX projects
-and users are managed by the General Project Management System (GPMS) developed at CeBiTec,
-which provides Single Sign-On (SSO) for all applications provided by CeBiTec's Computational
-Genomics group.
+analyze your metagenome or metatranscriptome data with MGX, please send a mail to the MGX team,
+which can be contacted at <a href="mailto:mgx@computational.bio.Uni-Giessen.DE">mgx@computational.bio.Uni-Giessen.DE</a>.
+MGX projects and users are managed by the General Project Management System (GPMS) developed at CeBiTec (Bielefeld
+University), which provides Single Sign-On (SSO) for all our applications.
 <BR>
 <P>
 To apply for a new project, please provide
@@ -66,7 +65,7 @@ To apply for a new project, please provide
 <P>
 
 <UL>
-<LI>suggested short <SPAN  CLASS="textit">project name</SPAN>, e.g. MGX_AcidMine
+<LI>a short <SPAN  CLASS="textit">project name</SPAN>, e.g. MGX_AcidMine
 </LI>
 <LI>a <SPAN  CLASS="textit">one-line description</SPAN> of your project (&rdquo;Acid Mine Drainage metagenome&rdquo;)
 </LI>
@@ -81,13 +80,13 @@ and the corresponding GPMS login name.
 <A NAME="CHILD_LINKS"><STRONG>Subsections</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html276"
+<LI><A NAME="tex2html277"
   HREF="node11.html">MGX roles</A>
 </UL>
 <!--End of Table of Child-Links-->
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
