--- a/guide/node18.html
+++ b/guide/node18.html
@@ -23,26 +23,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html368"
+<A NAME="tex2html369"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html364"
+<A NAME="tex2html365"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html358"
+<A NAME="tex2html359"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html366"
+<A NAME="tex2html367"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html369"
+<B> Next:</B> <A NAME="tex2html370"
   HREF="node19.html">Defining and executing analysis</A>
-<B> Up:</B> <A NAME="tex2html365"
+<B> Up:</B> <A NAME="tex2html366"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html359"
+<B> Previous:</B> <A NAME="tex2html360"
   HREF="node17.html">Importing sequence data</A>
- &nbsp; <B>  <A NAME="tex2html367"
+ &nbsp; <B>  <A NAME="tex2html368"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -54,7 +54,7 @@ Quality control</A>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="qcopen"></A><A NAME="247"></A>
+<DIV ALIGN="CENTER"><A NAME="qcopen"></A><A NAME="244"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.14:</STRONG>
 After selecting a sequencing run object, the Quality Control component can be opened
@@ -70,68 +70,64 @@ from its menubar icon (red circle).</CAPTION>
 </DIV>
 
 <P>
-After sequence import, Quality control reports generated within MGX should be inspected (<A HREF="#qcopen">2.14</A>) before proceding with data analysis.
+After sequence import, quality control reports generated within MGX should be inspected (Fig.&nbsp;<A HREF="#qcopen">2.14</A>) before proceding with data analysis.
 MGX currently offers three types of QC reports: Distribution of GC content, sequence length
 and nucleotide distribution within the DNA sequences. Those can be used to evaluate overall
 sequence data quality and check for possible signs of contamination.
-For demonstration purposes, data shown relates to the artificial <SPAN  CLASS="textbf">simHC</SPAN> metagenome dataset created by the
-FAMeS [<A
- HREF="node35.html#SIMMETA">Mavromatis et&nbsp;al., 2007</A>] project. The actual sequence data is publicly available and can be obtained from
-the FAMeS web site (<TT><A NAME="tex2html18"
-  HREF="http://fames.jgi-psf.org/Retrieve_data.html">http://fames.jgi-psf.org/Retrieve_data.html</A></TT>).
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="qc1"></A><A NAME="256"></A>
+<DIV ALIGN="CENTER"><A NAME="qc1"></A><A NAME="250"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.15:</STRONG>
-GC distribution of the simHC dataset.</CAPTION>
+GC distribution of a public metagenome dataset (SRR3569370).</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="378" HEIGHT="324" ALIGN="BOTTOM" BORDER="0"
- SRC="./QCgc.png"
- ALT="Image QCgc"></TD></TR>
+ WIDTH="333" HEIGHT="286" ALIGN="BOTTOM" BORDER="0"
+ SRC="img5.png"
+ ALT="\includegraphics[width=.6\textwidth]{img/mgx/QCgc}"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="qc2"></A><A NAME="261"></A>
+<DIV ALIGN="CENTER"><A NAME="qc2"></A><A NAME="255"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.16:</STRONG>
-Nucleotide distribution of the simHC dataset. A high fraction of uncalled bases
-is apparent from the chart.</CAPTION>
+Nucleotide distribution of the public metagenome. The chart displays the distribution
+of nucleotides within the first 100 bp.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="377" HEIGHT="318" ALIGN="BOTTOM" BORDER="0"
- SRC="./QCnuc.png"
- ALT="Image QCnuc"></TD></TR>
+ WIDTH="333" HEIGHT="281" ALIGN="BOTTOM" BORDER="0"
+ SRC="img6.png"
+ ALT="\includegraphics[width=.6\textwidth]{img/mgx/QCnuc}"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="qc3"></A><A NAME="266"></A>
+<DIV ALIGN="CENTER"><A NAME="qc3"></A><A NAME="260"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.17:</STRONG>
-Read length distribution of the simHC dataset. </CAPTION>
+Read length distribution of the metagenome dataset; here the sequencing
+data was imported without prior quality trimming.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="377" HEIGHT="322" ALIGN="BOTTOM" BORDER="0"
- SRC="./QCreadlen.png"
- ALT="Image QCreadlen"></TD></TR>
+ WIDTH="333" HEIGHT="285" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="\includegraphics[width=.6\textwidth]{img/mgx/QCreadlen}"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="qc4"></A><A NAME="285"></A>
+<DIV ALIGN="CENTER"><A NAME="qc4"></A><A NAME="279"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.18:</STRONG>
 Nucleotide distribution examples.</CAPTION>
@@ -141,9 +137,9 @@ Nucleotide distribution examples.</CAPTION>
 </DIV>        <BR>
 <IMG
  WIDTH="167" HEIGHT="143" BORDER="0"
- SRC="img3.png"
+ SRC="img8.png"
  ALT="\begin{subfigure}
-% latex2html id marker 270
+% latex2html id marker 264
 [b]{0.3\textwidth}
 \includegraphic...
 ...=\textwidth]{img/mgx/highGCnucl}
@@ -152,9 +148,9 @@ Nucleotide distribution examples.</CAPTION>
 <BR><BR>
 <IMG
  WIDTH="167" HEIGHT="143" BORDER="0"
- SRC="img4.png"
+ SRC="img9.png"
  ALT="\begin{subfigure}
-% latex2html id marker 275
+% latex2html id marker 269
 [b]{0.3\textwidth}
 \includegraphics[width=\textwidth]{img/mgx/ampliconNucl}
 \caption{Amplicon data}
@@ -163,9 +159,9 @@ Nucleotide distribution examples.</CAPTION>
         <BR>
 <IMG
  WIDTH="167" HEIGHT="142" BORDER="0"
- SRC="img5.png"
+ SRC="img10.png"
  ALT="\begin{subfigure}
-% latex2html id marker 280
+% latex2html id marker 274
 [b]{0.3\textwidth}
 \includegraphic...
 ...dth=\textwidth]{img/mgx/adapterNucl}
@@ -175,9 +171,9 @@ Nucleotide distribution examples.</CAPTION>
 </DIV>
 
 <P>
-Depending on the kind of sequence data, different patterns might emerge (<A HREF="#qc4">2.18</A>),
-which might or might not warrant any further action. While small amounts of e.g. 
-adapter residue are sometimes encountered and might be considered acceptable, it is up to the
+Depending on the kind of sequence data, different patterns may emerge (Fig.&nbsp;<A HREF="#qc4">2.18</A>),
+which might or might not warrant any further action. While small amounts of <SPAN  CLASS="textit">e.g.</SPAN>&nbsp;adapter
+residue are sometimes encountered and might be considered acceptable, it is up to the
 individual researcher to check back with their sequencing provider and ask for
 adapter sequences to execute additional trimming.
 
@@ -185,30 +181,30 @@ adapter sequences to execute additional trimming.
 
 <DIV CLASS="navigation"><HR>
 <!--Navigation Panel-->
-<A NAME="tex2html368"
+<A NAME="tex2html369"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html364"
+<A NAME="tex2html365"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html358"
+<A NAME="tex2html359"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html366"
+<A NAME="tex2html367"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html369"
+<B> Next:</B> <A NAME="tex2html370"
   HREF="node19.html">Defining and executing analysis</A>
-<B> Up:</B> <A NAME="tex2html365"
+<B> Up:</B> <A NAME="tex2html366"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html359"
+<B> Previous:</B> <A NAME="tex2html360"
   HREF="node17.html">Importing sequence data</A>
- &nbsp; <B>  <A NAME="tex2html367"
+ &nbsp; <B>  <A NAME="tex2html368"
   HREF="node1.html">Contents</A></B> </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
