--- a/guide/node24.html
+++ b/guide/node24.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>Biodiversity indices</TITLE>
-<META NAME="description" CONTENT="Biodiversity indices">
+<TITLE>Exporting sequences</TITLE>
+<META NAME="description" CONTENT="Exporting sequences">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,72 +14,70 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
+<LINK REL="next" HREF="node25.html">
 <LINK REL="previous" HREF="node23.html">
-<LINK REL="up" HREF="node22.html">
+<LINK REL="up" HREF="node23.html">
 <LINK REL="next" HREF="node25.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html440"
+<A NAME="tex2html443"
   HREF="node25.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html436"
-  HREF="node22.html">
+<A NAME="tex2html439"
+  HREF="node23.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html432"
+<A NAME="tex2html433"
   HREF="node23.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html438"
+<A NAME="tex2html441"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html441"
-  HREF="node25.html">Uploading own files</A>
-<B> Up:</B> <A NAME="tex2html437"
-  HREF="node22.html">Visualization of results</A>
-<B> Previous:</B> <A NAME="tex2html433"
-  HREF="node23.html">Exporting sequences</A>
- &nbsp; <B>  <A NAME="tex2html439"
+<B> Next:</B> <A NAME="tex2html444"
+  HREF="node25.html">Biodiversity indices</A>
+<B> Up:</B> <A NAME="tex2html440"
+  HREF="node23.html">Visualization of results</A>
+<B> Previous:</B> <A NAME="tex2html434"
+  HREF="node23.html">Visualization of results</A>
+ &nbsp; <B>  <A NAME="tex2html442"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 
-<H2><A NAME="SECTION00392000000000000000">
-Biodiversity indices</A>
+<H2><A NAME="SECTION003101000000000000000">
+Exporting sequences</A>
 </H2>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="biodiv"></A><A NAME="357"></A>
+<DIV ALIGN="CENTER"><A NAME="seqexp"></A><A NAME="346"></A>
 <TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.29:</STRONG>
-Biodiversity indices (bottom left) such as ACE or Shannon are computed for the currently
-selected visualization group.</CAPTION>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.28:</STRONG>
+Sequences can be exported for each group individually. The user can freely choose
+which attributes should be included.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="1360" HEIGHT="1036" ALIGN="BOTTOM" BORDER="0"
- SRC="./BioDiversity.png"
- ALT="Image BioDiversity"></TD></TR>
+  WIDTH="659" HEIGHT="633" ALIGN="BOTTOM" BORDER="0"
+ SRC="./SeqExport.png"
+ ALT="Image SeqExport"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
-The visualization module features another component used to display commonly used biodiversity indices, such as
-the ACE, Shannon [<A
- HREF="node35.html#SHANNON">Spellerberg and Fedor, 2003</A>], Chao1 [<A
- HREF="node35.html#DIVERSITY">Hughes et&nbsp;al., 2002</A>] and Simpson [<A
- HREF="node35.html#SIMPSON">Simpson, 1949</A>] indices. The component will automatically show the index values for the
-currently selected visualization group based on the chosen attribute type (<A HREF="#biodiv">2.29</A>).
+The sequence export wizard allows to export sequences conditionally based on analysis results. For each
+visualization group, it is possible to choose the attributes for which sequences should be obtained (<A HREF="#seqexp">2.28</A>).
+Sequences are subsequently downloaded from the MGX server and saved in FASTA format files for each group.
 
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
