--- a/guide/node28.html
+++ b/guide/node28.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>Displaying reference mappings</TITLE>
-<META NAME="description" CONTENT="Displaying reference mappings">
+<TITLE>Importing reference genomes</TITLE>
+<META NAME="description" CONTENT="Importing reference genomes">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,123 +14,83 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
+<LINK REL="next" HREF="node29.html">
 <LINK REL="previous" HREF="node27.html">
-<LINK REL="up" HREF="node26.html">
+<LINK REL="up" HREF="node27.html">
 <LINK REL="next" HREF="node29.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html488"
+<A NAME="tex2html491"
   HREF="node29.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html484"
-  HREF="node26.html">
+<A NAME="tex2html487"
+  HREF="node27.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html480"
+<A NAME="tex2html481"
   HREF="node27.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html486"
+<A NAME="tex2html489"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html489"
-  HREF="node29.html">Search</A>
-<B> Up:</B> <A NAME="tex2html485"
-  HREF="node26.html">Reference mapping</A>
-<B> Previous:</B> <A NAME="tex2html481"
-  HREF="node27.html">Importing reference genomes</A>
- &nbsp; <B>  <A NAME="tex2html487"
+<B> Next:</B> <A NAME="tex2html492"
+  HREF="node29.html">Displaying reference mappings</A>
+<B> Up:</B> <A NAME="tex2html488"
+  HREF="node27.html">Reference mapping</A>
+<B> Previous:</B> <A NAME="tex2html482"
+  HREF="node27.html">Reference mapping</A>
+ &nbsp; <B>  <A NAME="tex2html490"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 
-<H2><A NAME="SECTION003112000000000000000">
-Displaying reference mappings</A>
+<H2><A NAME="SECTION003121000000000000000">
+Importing reference genomes</A>
 </H2>
 
 <P>
-
-<DIV ALIGN="CENTER"><A NAME="refmap"></A><A NAME="382"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.32:</STRONG>
-The reference mapping component showing alignment results for a metatranscriptome dataset mapped to the reference genome of one of the dominant organisms. From top to bottom, the component displays a) navigation and coverage histogram, b) currently selected interval and c) aligned DNA sequences for the interval. Color coding refers to relative sequence identity.</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="1077" HEIGHT="925" ALIGN="BOTTOM" BORDER="0"
- SRC="./RefMapping.png"
- ALT="Image RefMapping"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-
-<DIV ALIGN="CENTER"><A NAME="fragrec"></A><A NAME="406"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.33:</STRONG>
-An alternate visualization mode is the generation of fragment recruitment plots, here showing the
-same data as described previously (<A HREF="#refmap">2.32</A>). The view mode features the fragment recruitment plot itself and additionally
-provides stacked bars summarizing mapping identity within reference intervals, grouped into low (red), medium (yellow, <SPAN CLASS="MATH"><IMG
- WIDTH="17" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
- SRC="img6.png"
- ALT="$\ge$"></SPAN> 75%) and
-high (green, <SPAN CLASS="MATH"><IMG
- WIDTH="17" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
- SRC="img6.png"
- ALT="$\ge$"></SPAN> 97%) quality mappings.</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="1372" HEIGHT="967" ALIGN="BOTTOM" BORDER="0"
- SRC="./FragRecruitment.png"
- ALT="Image FragRecruitment"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-Alignment of metagenome or metatranscriptome data to reference sequences of known origin allows researchers to evaluate
-relative identity between metagenome sequences and the actual strain or to obtain an overview of gene expression within
-a meta-transcriptome. MGX currently provides predefined pipelines employing BLAST [<A
- HREF="node35.html#BLAST">Altschul et&nbsp;al., 1990</A>], FR-HIT [<A
- HREF="node35.html#FRHIT">Niu et&nbsp;al., 2011</A>] and Bowtie 2 [<A
- HREF="node35.html#BOWTIE">Langmead and Salzberg, 2012</A>].
-The reference mapping component is provided to inspect and browse alignment results, offering both a generic alignment view
-where each mapped sequence is colored according to mapping identity, as well as a fragment recruitment view. Switching between
-view modes is possible from the context menu of the mapping component.
-
-<P>
-
-<DIV CLASS="navigation"><HR>
-<!--Navigation Panel-->
-<A NAME="tex2html488"
-  HREF="node29.html">
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html484"
-  HREF="node26.html">
-<IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html480"
-  HREF="node27.html">
-<IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html486"
-  HREF="node1.html">
-<IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
+MGX provides several analysis pipelines to align metagenome reads to reference genomes;
+before these pipelines can be used, the corresponding reference genome has to be added
+to the project. There are two possible ways to achieve this: The MGX repository hosts
+published and annotated reference genomes obtained from the NCBI; in addition, users
+may choose to upload a custom reference sequence in FASTA, GenBank or EMBL format, e.g.
+a finished but unpublished genome not available from official sources.
 <BR>
-<B> Next:</B> <A NAME="tex2html489"
-  HREF="node29.html">Search</A>
-<B> Up:</B> <A NAME="tex2html485"
-  HREF="node26.html">Reference mapping</A>
-<B> Previous:</B> <A NAME="tex2html481"
-  HREF="node27.html">Importing reference genomes</A>
- &nbsp; <B>  <A NAME="tex2html487"
-  HREF="node1.html">Contents</A></B> </DIV>
-<!--End of Navigation Panel-->
+<P>
+
+<DIV ALIGN="CENTER"><A NAME="addref"></A><A NAME="371"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.31:</STRONG>
+Reference sequences to be used as mapping targets may be
+imported from the global repository or uploaded in EMBL/GenBank/FASTA format.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="457" HEIGHT="115" ALIGN="BOTTOM" BORDER="0"
+ SRC="./addReference.png"
+ ALT="Image addReference"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+To add a reference genome, right-click on the &ldquo;Reference sequences&rdquo; node within the
+project view and select either &ldquo;Add reference&rdquo; to access the MGX repository or
+&ldquo;Upload EMBL/GenBank/FASTA reference&rdquo; to provide an own sequence (<A HREF="#addref">2.31</A>).
+<BR>
+<P>
+Once the import is complete, the reference genome is available for analysis and
+can be selected for the corresponding analysis pipelines which provide reference
+mapping, e.g. BowTie or FR-HIT.
+
+<P>
+<BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
