--- a/guide/node3.html
+++ b/guide/node3.html
@@ -53,20 +53,20 @@ Prerequisites</A>
 
 <P>
 MGX is a client/server application based on the Netbeans Platform and implemented
-in Java. To run the client application, the following dependencies have to be
+in Java. To run the MGX 2.0 client application, the following dependencies have to be
 met:
 
 <P>
 
 <UL>
-<LI>Java Development Kit, 1.8 or later
+<LI>Java Development Kit 17 or later
 </LI>
 <LI>Supported Operating Systems: Windows, Linux, Mac OS X
 </LI>
 <LI>Memory requirements: <SPAN CLASS="MATH"><IMG
  WIDTH="32" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img1.png"
- ALT="$&gt;=$"></SPAN> 2GB RAM
+ ALT="$&gt;=$"></SPAN> 4GB RAM
 </LI>
 <LI>(preferably broadband) Internet connection
 </LI>
@@ -92,7 +92,7 @@ met:
 <!--End of Table of Child-Links-->
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
