--- a/guide/node38.html
+++ b/guide/node38.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>About this document ...</TITLE>
-<META NAME="description" CONTENT="About this document ...">
+<TITLE>List of Tables</TITLE>
+<META NAME="description" CONTENT="List of Tables">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,66 +14,48 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
+<LINK REL="next" HREF="node39.html">
 <LINK REL="previous" HREF="node37.html">
 <LINK REL="up" HREF="main.html">
+<LINK REL="next" HREF="node39.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next_g.png"> 
-<A NAME="tex2html601"
+<A NAME="tex2html608"
+  HREF="node39.html">
+<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
+<A NAME="tex2html604"
   HREF="main.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html597"
+<A NAME="tex2html598"
   HREF="node37.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html603"
+<A NAME="tex2html606"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Up:</B> <A NAME="tex2html602"
+<B> Next:</B> <A NAME="tex2html609"
+  HREF="node39.html">About this document ...</A>
+<B> Up:</B> <A NAME="tex2html605"
   HREF="main.html">MGX User Guide</A>
-<B> Previous:</B> <A NAME="tex2html598"
-  HREF="node37.html">List of Tables</A>
- &nbsp; <B>  <A NAME="tex2html604"
+<B> Previous:</B> <A NAME="tex2html599"
+  HREF="node37.html">List of Figures</A>
+ &nbsp; <B>  <A NAME="tex2html607"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
-
-<H1><A NAME="SECTION00800000000000000000">
-About this document ...</A>
-</H1>
- <STRONG><TABLE  WIDTH="499">
-<TR><TD>
-    <DIV ALIGN="CENTER">
-
-</DIV>    <IMG
-  WIDTH="755" HEIGHT="536" ALIGN="BOTTOM" BORDER="0"
- SRC="./logo.png"
- ALT="Image logo">
-    <BIG CLASS="XHUGE">    <SPAN  CLASS="textbf">MGX User Guide</SPAN>
-  </BIG></TD></TR>
-</TABLE></STRONG><P>
-This document was generated using the
-<A HREF="http://www.latex2html.org/"><STRONG>LaTeX</STRONG>2<tt>HTML</tt></A> translator Version 2018 (Released Feb 1, 2018)
-<P>
-Copyright &#169; 1993, 1994, 1995, 1996,
-Nikos Drakos, 
-Computer Based Learning Unit, University of Leeds.
 <BR>
-Copyright &#169; 1997, 1998, 1999,
-<A HREF="http://www.maths.mq.edu.au/~ross/">Ross Moore</A>, 
-Mathematics Department, Macquarie University, Sydney.
+
+<H2><A NAME="SECTION00700000000000000000">
+List of Tables</A>
+</H2>
 <P>
-The command line arguments were: <BR>
- <STRONG>latex2html</STRONG> <TT>-address 'Sebastian Jaenicke, 2020-04-28' main.tex</TT>
-<P>
-The translation was initiated on 2020-04-28
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
