--- a/guide/node4.html
+++ b/guide/node4.html
@@ -58,19 +58,12 @@ Java is already installed on most systems or can be obtained free of charge from
 <BR>
 <P>
 <TT><A NAME="tex2html1"
-  HREF="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html</A></TT>.
+  HREF="https://openjdk.org/">https://openjdk.org/</A></TT>.
 <BR>
-<P>
-The installed Java version can be checked e.g. at
-<BR>
-<P>
-<TT><A NAME="tex2html2"
-  HREF="http://www.java.com/de/download/installed.jsp">http://www.java.com/de/download/installed.jsp</A></TT>.
-
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
