--- a/guide/node5.html
+++ b/guide/node5.html
@@ -53,14 +53,13 @@ Supported Operating Systems</A>
 </H2>
 
 <P>
-The MGX application is developed and regularly used on Unix-based systems,
-but has already successfully been used on computers running Windows and
-Mac OS X.
+The MGX application is developed and regularly used on Unix-based systems, <SPAN  CLASS="textit">e.g.</SPAN>&nbsp;Linux,
+but is also compatible with computers running Windows or Mac OS X.
 
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
