--- a/guide/node6.html
+++ b/guide/node6.html
@@ -53,13 +53,13 @@ Memory and disk requirements</A>
 </H2>
 
 <P>
-512MB of available main memory are sufficient to run MGX. Installation of the
-software requires about 60MB of disk space.
+4 GB of available main memory are sufficient to run MGX. Installation of the
+software requires about 100 MB of disk space.
 
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
