--- a/guide/node7.html
+++ b/guide/node7.html
@@ -57,14 +57,14 @@ The network communication protocol used by the MGX framework has been heavily op
 allow usage even with low-throughput connections. Thus, typical usage of the application
 like visualization of analysis results does not require a lot of bandwidth, although
 overall performance may suffer with high-latency or low-bandwidth connections. However, as
-sequence datasets obtained by metagenome sequencing tend to be quite large, a broadband 
+sequence datasets obtained by metagenome and metatranscriptome sequencing tend to be quite large, a broadband 
 connection is recommended at least for initial data upload to the MGX server or when exporting
 sequence data from a MGX project.
 
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
