--- a/guide/index.html
+++ b/guide/index.html
@@ -20,18 +20,18 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html55"
+<A NAME="tex2html53"
   HREF="node1.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up_g.png"> 
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev_g.png"> 
-<A NAME="tex2html53"
+<A NAME="tex2html51"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html56"
+<B> Next:</B> <A NAME="tex2html54"
   HREF="node1.html">Contents</A>
- &nbsp; <B>  <A NAME="tex2html54"
+ &nbsp; <B>  <A NAME="tex2html52"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -59,110 +59,112 @@
 <A NAME="CHILD_LINKS"></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html57"
+<LI><A NAME="tex2html55"
   HREF="node1.html">Contents</A>
-<LI><A NAME="tex2html58"
+<LI><A NAME="tex2html56"
   HREF="node2.html">Installation</A>
 <UL>
-<LI><A NAME="tex2html59"
+<LI><A NAME="tex2html57"
   HREF="node3.html">Prerequisites</A>
 <UL>
-<LI><A NAME="tex2html60"
+<LI><A NAME="tex2html58"
   HREF="node4.html">Java</A>
-<LI><A NAME="tex2html61"
+<LI><A NAME="tex2html59"
   HREF="node5.html">Supported Operating Systems</A>
-<LI><A NAME="tex2html62"
+<LI><A NAME="tex2html60"
   HREF="node6.html">Memory and disk requirements</A>
-<LI><A NAME="tex2html63"
+<LI><A NAME="tex2html61"
   HREF="node7.html">Internet connection</A>
-<LI><A NAME="tex2html64"
+<LI><A NAME="tex2html62"
   HREF="node8.html">Obtaining MGX</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html65"
+<LI><A NAME="tex2html63"
   HREF="node9.html">Using the MGX application</A>
 <UL>
-<LI><A NAME="tex2html66"
+<LI><A NAME="tex2html64"
   HREF="node10.html">Obtaining a MGX project</A>
 <UL>
-<LI><A NAME="tex2html67"
+<LI><A NAME="tex2html65"
   HREF="node11.html">MGX roles</A>
 </UL>
-<LI><A NAME="tex2html68"
+<LI><A NAME="tex2html66"
   HREF="node12.html">Basic concepts</A>
 <UL>
-<LI><A NAME="tex2html69"
+<LI><A NAME="tex2html67"
   HREF="node13.html">Metadata</A>
 </UL>
-<LI><A NAME="tex2html70"
+<LI><A NAME="tex2html68"
   HREF="node14.html">Connecting to a MGX server</A>
-<LI><A NAME="tex2html71"
+<LI><A NAME="tex2html69"
   HREF="node15.html">Creating a new habitat</A>
-<LI><A NAME="tex2html72"
+<LI><A NAME="tex2html70"
   HREF="node16.html">Creating new samples and DNA extracts</A>
-<LI><A NAME="tex2html73"
+<LI><A NAME="tex2html71"
   HREF="node17.html">Importing sequence data</A>
-<LI><A NAME="tex2html74"
+<LI><A NAME="tex2html72"
   HREF="node18.html">Quality control</A>
-<LI><A NAME="tex2html75"
+<LI><A NAME="tex2html73"
   HREF="node19.html">Defining and executing analysis jobs</A>
 <UL>
-<LI><A NAME="tex2html76"
+<LI><A NAME="tex2html74"
   HREF="node20.html">Selecting an analysis pipeline</A>
-<LI><A NAME="tex2html77"
+<LI><A NAME="tex2html75"
   HREF="node21.html">Monitoring job progress</A>
 </UL>
+<LI><A NAME="tex2html76"
+  HREF="node22.html">Assembling a metagenome or metatranscriptome</A>
+<LI><A NAME="tex2html77"
+  HREF="node23.html">Visualization of results</A>
+<UL>
 <LI><A NAME="tex2html78"
-  HREF="node22.html">Visualization of results</A>
-<UL>
+  HREF="node24.html">Exporting sequences</A>
 <LI><A NAME="tex2html79"
-  HREF="node23.html">Exporting sequences</A>
+  HREF="node25.html">Biodiversity indices</A>
+</UL>
 <LI><A NAME="tex2html80"
-  HREF="node24.html">Biodiversity indices</A>
-</UL>
+  HREF="node26.html">Uploading own files</A>
 <LI><A NAME="tex2html81"
-  HREF="node25.html">Uploading own files</A>
+  HREF="node27.html">Reference mapping</A>
+<UL>
 <LI><A NAME="tex2html82"
-  HREF="node26.html">Reference mapping</A>
-<UL>
+  HREF="node28.html">Importing reference genomes</A>
 <LI><A NAME="tex2html83"
-  HREF="node27.html">Importing reference genomes</A>
+  HREF="node29.html">Displaying reference mappings</A>
+</UL>
 <LI><A NAME="tex2html84"
-  HREF="node28.html">Displaying reference mappings</A>
+  HREF="node30.html">Search</A>
 </UL>
+<BR>
 <LI><A NAME="tex2html85"
-  HREF="node29.html">Search</A>
-</UL>
-<BR>
+  HREF="node31.html">Implementing custom analysis pipelines</A>
+<UL>
 <LI><A NAME="tex2html86"
-  HREF="node30.html">Implementing custom analysis pipelines</A>
-<UL>
+  HREF="node32.html">Getting started</A>
 <LI><A NAME="tex2html87"
-  HREF="node31.html">Getting started</A>
+  HREF="node33.html">Workflow requirements</A>
 <LI><A NAME="tex2html88"
-  HREF="node32.html">Workflow requirements</A>
-<LI><A NAME="tex2html89"
-  HREF="node33.html">Annotating metagenome sequences</A>
+  HREF="node34.html">Annotating metagenome sequences</A>
 <UL>
-<LI><A NAME="tex2html90"
-  HREF="node34.html">Creating hierarchical attributes</A>
+<LI><A NAME="tex2html89"
+  HREF="node35.html">Creating hierarchical attributes</A>
 </UL>
 </UL>
 <BR>
+<LI><A NAME="tex2html90"
+  HREF="node36.html">Bibliography</A>
 <LI><A NAME="tex2html91"
-  HREF="node35.html">Bibliography</A>
+  HREF="node37.html">List of Figures</A>
 <LI><A NAME="tex2html92"
-  HREF="node36.html">List of Figures</A>
+  HREF="node38.html">List of Tables</A>
 <LI><A NAME="tex2html93"
-  HREF="node37.html">List of Tables</A>
-<LI><A NAME="tex2html94"
-  HREF="node38.html">About this document ...</A>
+  HREF="node39.html">About this document ...</A>
 </UL>
 <!--End of Table of Child-Links-->
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
