--- a/guide/node11.html
+++ b/guide/node11.html
@@ -22,26 +22,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html285"
+<A NAME="tex2html286"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html281"
+<A NAME="tex2html282"
   HREF="node10.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html277"
+<A NAME="tex2html278"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html283"
+<A NAME="tex2html284"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html286"
+<B> Next:</B> <A NAME="tex2html287"
   HREF="node12.html">Basic concepts</A>
-<B> Up:</B> <A NAME="tex2html282"
+<B> Up:</B> <A NAME="tex2html283"
   HREF="node10.html">Obtaining a MGX project</A>
-<B> Previous:</B> <A NAME="tex2html278"
+<B> Previous:</B> <A NAME="tex2html279"
   HREF="node10.html">Obtaining a MGX project</A>
- &nbsp; <B>  <A NAME="tex2html284"
+ &nbsp; <B>  <A NAME="tex2html285"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -58,7 +58,7 @@ project:
 <P>
 
 <UL>
-<LI><SPAN  CLASS="textbf">Admins</SPAN> are equal to Users (see below), but can grant access to additional users.
+<LI><SPAN  CLASS="textbf">Admins</SPAN> are equal to Users (see below), but can request access to be granted to additional users.
 </LI>
 <LI><SPAN  CLASS="textbf">Users</SPAN> have full access to a MGX project and are able to define new or modify
 present datasets, import new sequences and execute analysis jobs. They are also able to
@@ -78,7 +78,7 @@ to carefully protect their login credentials and not to share them with any thir
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
