--- a/guide/node16.html
+++ b/guide/node16.html
@@ -23,26 +23,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html344"
+<A NAME="tex2html345"
   HREF="node17.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html340"
+<A NAME="tex2html341"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html334"
+<A NAME="tex2html335"
   HREF="node15.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html342"
+<A NAME="tex2html343"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html345"
+<B> Next:</B> <A NAME="tex2html346"
   HREF="node17.html">Importing sequence data</A>
-<B> Up:</B> <A NAME="tex2html341"
+<B> Up:</B> <A NAME="tex2html342"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html335"
+<B> Previous:</B> <A NAME="tex2html336"
   HREF="node15.html">Creating a new habitat</A>
- &nbsp; <B>  <A NAME="tex2html343"
+ &nbsp; <B>  <A NAME="tex2html344"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -59,7 +59,7 @@ from the context menu of the &rdquo;Habitat&rdquo; and &rdquo;Sample&rdquo; node
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="samplewiz1"></A><A NAME="215"></A>
+<DIV ALIGN="CENTER"><A NAME="samplewiz1"></A><A NAME="209"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.8:</STRONG>
 In the first step of the sample wizard, the sampling date is selected.</CAPTION>
@@ -75,7 +75,7 @@ In the first step of the sample wizard, the sampling date is selected.</CAPTION>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="samplewiz2"></A><A NAME="220"></A>
+<DIV ALIGN="CENTER"><A NAME="samplewiz2"></A><A NAME="214"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.9:</STRONG>
 In the second step, the sampled material as well as temperature and sampled volume/weight
@@ -92,7 +92,7 @@ need to be entered.</CAPTION>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="extractwiz1"></A><A NAME="225"></A>
+<DIV ALIGN="CENTER"><A NAME="extractwiz1"></A><A NAME="219"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.10:</STRONG>
 The DNA extract wizard allows to specify the type of DNA extract (metagenome, 
@@ -109,12 +109,12 @@ metatranscriptome, amplicon) and protocols used to extract the DNA.</CAPTION>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="extractwiz2"></A><A NAME="230"></A>
+<DIV ALIGN="CENTER"><A NAME="extractwiz2"></A><A NAME="224"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.11:</STRONG>
 Depending on DNA extract type, additional data can be provided; for amplicons, primer
-names and the corresponding target gene (fragment) can be entered, for metatranscriptomes, the type of RNA depletion
-methods can be selected.</CAPTION>
+names and the corresponding target gene (fragment) can be entered, for metatranscriptomes, the type of ribosomal 
+RNA depletion methods can be selected.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
@@ -129,30 +129,30 @@ methods can be selected.</CAPTION>
 
 <DIV CLASS="navigation"><HR>
 <!--Navigation Panel-->
-<A NAME="tex2html344"
+<A NAME="tex2html345"
   HREF="node17.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html340"
+<A NAME="tex2html341"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html334"
+<A NAME="tex2html335"
   HREF="node15.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html342"
+<A NAME="tex2html343"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html345"
+<B> Next:</B> <A NAME="tex2html346"
   HREF="node17.html">Importing sequence data</A>
-<B> Up:</B> <A NAME="tex2html341"
+<B> Up:</B> <A NAME="tex2html342"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html335"
+<B> Previous:</B> <A NAME="tex2html336"
   HREF="node15.html">Creating a new habitat</A>
- &nbsp; <B>  <A NAME="tex2html343"
+ &nbsp; <B>  <A NAME="tex2html344"
   HREF="node1.html">Contents</A></B> </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
