--- a/guide/node17.html
+++ b/guide/node17.html
@@ -23,26 +23,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html356"
+<A NAME="tex2html357"
   HREF="node18.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html352"
+<A NAME="tex2html353"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html346"
+<A NAME="tex2html347"
   HREF="node16.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html354"
+<A NAME="tex2html355"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html357"
+<B> Next:</B> <A NAME="tex2html358"
   HREF="node18.html">Quality control</A>
-<B> Up:</B> <A NAME="tex2html353"
+<B> Up:</B> <A NAME="tex2html354"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html347"
+<B> Previous:</B> <A NAME="tex2html348"
   HREF="node16.html">Creating new samples and</A>
- &nbsp; <B>  <A NAME="tex2html355"
+ &nbsp; <B>  <A NAME="tex2html356"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -53,12 +53,23 @@ Importing sequence data</A>
 </H1>
 
 <P>
+Finally, sequence data can be imported into the MGX project by creating new &ldquo;sequencing run&rdquo; objects; using the
+corresponding wizard (Fig.&nbsp;<A HREF="#dnawiz1">2.12</A>), a name and details about the sequencing methodology such as platform
+and strategy can be deposited. Depending on whether single-end or paired-end/mate-pair data was selected, the
+wizard subsequently allows to select one or two files (Fig.&nbsp;<A HREF="#dnawiz2">2.13</A>).
+<BR>
+<P>
+Give the large number of different sequencing adapters and barcoding schemes, MGX is unable to address all of
+them; hence, proper adapter removal, quality-based trimming (and filtering of <SPAN  CLASS="textit">e.g.</SPAN>&nbsp;host DNA should be
+performed before uploading datasets to MGX for analysis.
+<BR>
+<P>
 
-<DIV ALIGN="CENTER"><A NAME="dnawiz1"></A><A NAME="236"></A>
+<DIV ALIGN="CENTER"><A NAME="dnawiz1"></A><A NAME="401"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.12:</STRONG>
 Before sequence data can be uploaded, the employed sequencing platform and technology have 
-to be specified; for data already submitted to or obtained from public INSDC repositories (e.g. NCBI, EBI, DDBJ), the
+to be specified; for data already submitted to or obtained from public INSDC repositories (<SPAN  CLASS="textit">e.g.</SPAN>&nbsp;NCBI, EBI, DDBJ), the
 corresponding accession number can be stored, as well.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
@@ -72,7 +83,7 @@ corresponding accession number can be stored, as well.</CAPTION>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="dnawiz2"></A><A NAME="241"></A>
+<DIV ALIGN="CENTER"><A NAME="dnawiz2"></A><A NAME="238"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.13:</STRONG>
 Finally, the file containing the sequence data is selected; MGX supports all commonly used
@@ -88,9 +99,33 @@ file formats such as FASTA, FASTQ, or SFF.</CAPTION>
 </DIV>
 
 <P>
-<BR><HR>
+
+<DIV CLASS="navigation"><HR>
+<!--Navigation Panel-->
+<A NAME="tex2html357"
+  HREF="node18.html">
+<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
+<A NAME="tex2html353"
+  HREF="node9.html">
+<IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
+<A NAME="tex2html347"
+  HREF="node16.html">
+<IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
+<A NAME="tex2html355"
+  HREF="node1.html">
+<IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
+<BR>
+<B> Next:</B> <A NAME="tex2html358"
+  HREF="node18.html">Quality control</A>
+<B> Up:</B> <A NAME="tex2html354"
+  HREF="node9.html">Using the MGX application</A>
+<B> Previous:</B> <A NAME="tex2html348"
+  HREF="node16.html">Creating new samples and</A>
+ &nbsp; <B>  <A NAME="tex2html356"
+  HREF="node1.html">Contents</A></B> </DIV>
+<!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
