--- a/guide/node20.html
+++ b/guide/node20.html
@@ -23,26 +23,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html394"
+<A NAME="tex2html395"
   HREF="node21.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html390"
+<A NAME="tex2html391"
   HREF="node19.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html384"
+<A NAME="tex2html385"
   HREF="node19.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html392"
+<A NAME="tex2html393"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html395"
+<B> Next:</B> <A NAME="tex2html396"
   HREF="node21.html">Monitoring job progress</A>
-<B> Up:</B> <A NAME="tex2html391"
+<B> Up:</B> <A NAME="tex2html392"
   HREF="node19.html">Defining and executing analysis</A>
-<B> Previous:</B> <A NAME="tex2html385"
+<B> Previous:</B> <A NAME="tex2html386"
   HREF="node19.html">Defining and executing analysis</A>
- &nbsp; <B>  <A NAME="tex2html393"
+ &nbsp; <B>  <A NAME="tex2html394"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -54,7 +54,7 @@ Selecting an analysis pipeline</A>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="anawiz1"></A><A NAME="293"></A>
+<DIV ALIGN="CENTER"><A NAME="anawiz1"></A><A NAME="288"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.19:</STRONG>
 Analysis pipelines can be selected from the corresponding
@@ -74,12 +74,12 @@ a custom workflow can be uploaded and executed.</CAPTION>
 All analysis pipelines can be started from the context menu of the metagenome dataset to be analyzed, provided
 the user has been granted at least &ldquo;User&rdquo; level access. First,
 the user can choose the desired pipeline from the project itself, from the pipeline repository hosted on the
-MGX server, or upload an own pipeline implementation (<A HREF="#anawiz1">2.19</A>). Subsequently, analysis parameters
-can be reviewed and adapted (<A HREF="#anawiz2">2.20</A>) before submitting an analysis.
+MGX server, or upload an own pipeline implementation (Fig.&nbsp;<A HREF="#anawiz1">2.19</A>). Subsequently, analysis parameters
+can be reviewed and adapted (Fig.&nbsp;<A HREF="#anawiz2">2.20</A>) before submitting an analysis.
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="anawiz2"></A><A NAME="300"></A>
+<DIV ALIGN="CENTER"><A NAME="anawiz2"></A><A NAME="295"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.20:</STRONG>
 The wizard allows to inspect and adapt parameters for the selected pipeline. The actual
@@ -96,7 +96,7 @@ number of steps depends on the number of parameters available for customization.
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="anawiz3"></A><A NAME="305"></A>
+<DIV ALIGN="CENTER"><A NAME="anawiz3"></A><A NAME="300"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.21:</STRONG>
 Before executing an analysis pipeline, a final overview of all parameters is shown. Once
@@ -116,30 +116,30 @@ only one single parameter.</CAPTION>
 
 <DIV CLASS="navigation"><HR>
 <!--Navigation Panel-->
-<A NAME="tex2html394"
+<A NAME="tex2html395"
   HREF="node21.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html390"
+<A NAME="tex2html391"
   HREF="node19.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html384"
+<A NAME="tex2html385"
   HREF="node19.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html392"
+<A NAME="tex2html393"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html395"
+<B> Next:</B> <A NAME="tex2html396"
   HREF="node21.html">Monitoring job progress</A>
-<B> Up:</B> <A NAME="tex2html391"
+<B> Up:</B> <A NAME="tex2html392"
   HREF="node19.html">Defining and executing analysis</A>
-<B> Previous:</B> <A NAME="tex2html385"
+<B> Previous:</B> <A NAME="tex2html386"
   HREF="node19.html">Defining and executing analysis</A>
- &nbsp; <B>  <A NAME="tex2html393"
+ &nbsp; <B>  <A NAME="tex2html394"
   HREF="node1.html">Contents</A></B> </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
