--- a/guide/node21.html
+++ b/guide/node21.html
@@ -22,26 +22,26 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html404"
+<A NAME="tex2html405"
   HREF="node22.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html400"
+<A NAME="tex2html401"
   HREF="node19.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html396"
+<A NAME="tex2html397"
   HREF="node20.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html402"
+<A NAME="tex2html403"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html405"
-  HREF="node22.html">Visualization of results</A>
-<B> Up:</B> <A NAME="tex2html401"
+<B> Next:</B> <A NAME="tex2html406"
+  HREF="node22.html">Assembling a metagenome or</A>
+<B> Up:</B> <A NAME="tex2html402"
   HREF="node19.html">Defining and executing analysis</A>
-<B> Previous:</B> <A NAME="tex2html397"
+<B> Previous:</B> <A NAME="tex2html398"
   HREF="node20.html">Selecting an analysis pipeline</A>
- &nbsp; <B>  <A NAME="tex2html403"
+ &nbsp; <B>  <A NAME="tex2html404"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
@@ -53,7 +53,7 @@ Monitoring job progress</A>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="jobmon1"></A><A NAME="311"></A>
+<DIV ALIGN="CENTER"><A NAME="jobmon1"></A><A NAME="306"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.22:</STRONG>
 The Job Monitor component can be opened using its icon in the toolbar.</CAPTION>
@@ -69,7 +69,7 @@ The Job Monitor component can be opened using its icon in the toolbar.</CAPTION>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="jobmon2"></A><A NAME="316"></A>
+<DIV ALIGN="CENTER"><A NAME="jobmon2"></A><A NAME="311"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.23:</STRONG>
 The Job Monitor provides an overview of job states. Depending on context, all jobs
@@ -86,8 +86,8 @@ within a MGX project or only jobs for a single dataset will be displayed.</CAPTI
 
 <P>
 The Job Monitor component is provided to inspect the state of jobs present within a MGX project.
-It can be opened from the toolbar (<A HREF="#jobmon1">2.22</A> )and will display the state of jobs scheduled for execution,
-currently running or already finished (<A HREF="#jobmon2">2.23</A>). In addition, it can also be used to delete jobs and
+It can be opened from the toolbar (Fig.&nbsp;<A HREF="#jobmon1">2.22</A> )and will display the state of jobs scheduled for execution,
+currently running or already finished (Fig.&nbsp;<A HREF="#jobmon2">2.23</A>). In addition, it can also be used to delete jobs and
 corresponding analysis results when no longer needed. Depending on the selected item in the
 Project Explorer, the Job Monitor will by default display all jobs within a project; if a single
 sequencing run is selected, only jobs for this dataset will be shown.
@@ -95,7 +95,7 @@ sequencing run is selected, only jobs for this dataset will be shown.
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
