--- a/guide/node23.html
+++ b/guide/node23.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>Exporting sequences</TITLE>
-<META NAME="description" CONTENT="Exporting sequences">
+<TITLE>Visualization of results</TITLE>
+<META NAME="description" CONTENT="Visualization of results">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,70 +14,176 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
-<LINK REL="next" HREF="node24.html">
+<LINK REL="next" HREF="node26.html">
 <LINK REL="previous" HREF="node22.html">
-<LINK REL="up" HREF="node22.html">
+<LINK REL="up" HREF="node9.html">
 <LINK REL="next" HREF="node24.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html430"
+<A NAME="tex2html429"
   HREF="node24.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html426"
-  HREF="node22.html">
+<A NAME="tex2html425"
+  HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html420"
+<A NAME="tex2html419"
   HREF="node22.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html428"
+<A NAME="tex2html427"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html431"
-  HREF="node24.html">Biodiversity indices</A>
-<B> Up:</B> <A NAME="tex2html427"
-  HREF="node22.html">Visualization of results</A>
-<B> Previous:</B> <A NAME="tex2html421"
-  HREF="node22.html">Visualization of results</A>
- &nbsp; <B>  <A NAME="tex2html429"
+<B> Next:</B> <A NAME="tex2html430"
+  HREF="node24.html">Exporting sequences</A>
+<B> Up:</B> <A NAME="tex2html426"
+  HREF="node9.html">Using the MGX application</A>
+<B> Previous:</B> <A NAME="tex2html420"
+  HREF="node22.html">Assembling a metagenome or</A>
+ &nbsp; <B>  <A NAME="tex2html428"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 
-<H2><A NAME="SECTION00391000000000000000">
-Exporting sequences</A>
-</H2>
+<H1><A NAME="SECTION003100000000000000000">
+Visualization of results</A>
+</H1>
 
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="seqexp"></A><A NAME="350"></A>
+<DIV ALIGN="CENTER"><A NAME="viz1"></A><A NAME="320"></A>
 <TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.28:</STRONG>
-Sequences can be exported for each group individually. The user can freely choose
-which attributes should be included.</CAPTION>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.24:</STRONG>
+Icon for the visualization module.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="659" HEIGHT="633" ALIGN="BOTTOM" BORDER="0"
- SRC="./SeqExport.png"
- ALT="Image SeqExport"></TD></TR>
+  WIDTH="313" HEIGHT="289" ALIGN="BOTTOM" BORDER="0"
+ SRC="./VizOpen.png"
+ ALT="Image VizOpen"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
-The sequence export wizard allows to export sequences conditionally based on analysis results. For each
-visualization group, it is possible to choose the attributes for which sequences should be obtained (<A HREF="#seqexp">2.28</A>).
-Sequences are subsequently downloaded from the MGX server and saved in FASTA format files for each group.
+
+<DIV ALIGN="CENTER"><A NAME="viz2"></A><A NAME="325"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.25:</STRONG>
+Components of the visualization module. The bottom window is
+used to create and define groups, while the top window allows to select result and visualization
+type, customize options and display the final chart.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="1034" HEIGHT="924" ALIGN="BOTTOM" BORDER="0"
+ SRC="./VizComponent.png"
+ ALT="Image VizComponent"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+The visualization component actually consists of two separate windows (<A HREF="#viz2">2.25</A>). The Group
+Window is located at the bottom and used to create, name and define groups used for data display.
+Sequencing runs can be added to individual groups using <SPAN  CLASS="textit">Drag and Drop</SPAN>. While any
+sequencing run can be present in several groups at the same time, it is not possible to add
+it to a group more than once. Groups may be assigned a name, their display color can be chosen
+by the user, and they may be temporarily excluded from display.
+<BR>
+The main visualization window is shown at the top; once sequencing runs are added or changed, 
+the type of analysis result to be shown can be chosen on the top right. Afterwards, the desired
+visualization type is selected and may be customized, as well.
+
+<P>
+
+<DIV ALIGN="CENTER"><A NAME="viz3"></A><A NAME="332"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.26:</STRONG>
+Visualization example displaying a bar chart for two groups.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="1038" HEIGHT="920" ALIGN="BOTTOM" BORDER="0"
+ SRC="./VizDemo.png"
+ ALT="Image VizDemo"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+Figure <A HREF="#viz3">2.26</A> shows a simple visualization example. Two groups were defined containing the simLC and simMC metagenomes
+in the first and the simHC metagenome in the second group. The main visualization window shows a bar chart
+generated for these groups based on assigned EC numbers. To account for differences in dataset size, both
+groups are normalized to fractions.
+
+<P>
+
+<DIV ALIGN="CENTER"><A NAME="viz4"></A><A NAME="402"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.27:</STRONG>
+In case a result is provided by more than one job, e.g. different taxonomic assignment methods,
+a dialog allows to select between jobs. In this example, taxonomic assignments are provided by MGX pipelines employing Kraken [<A
+ HREF="node36.html#KRAKEN">Wood and Salzberg, 2014</A>]
+as well as MetaCV [<A
+ HREF="node36.html#METACV">Liu et&nbsp;al., 2012</A>].</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="623" HEIGHT="513" ALIGN="BOTTOM" BORDER="0"
+ SRC="./ConflictResolver.png"
+ ALT="Image ConflictResolver"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+Whenever a selected result type is provided by more than one analysis job, an interactive dialog allows the user to
+review possible jobs and select one (Fig.&nbsp;<A HREF="#viz4">2.27</A>). This scenario will occur when a tool is executed several 
+times with different parameters, or when different taxonomic classifiers were used to analyse a dataset.
 
 <P>
 <BR><HR>
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsections</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><A NAME="tex2html431"
+  HREF="node24.html">Exporting sequences</A>
+<LI><A NAME="tex2html432"
+  HREF="node25.html">Biodiversity indices</A>
+</UL>
+<!--End of Table of Child-Links-->
+
+<DIV CLASS="navigation"><HR>
+<!--Navigation Panel-->
+<A NAME="tex2html429"
+  HREF="node24.html">
+<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
+<A NAME="tex2html425"
+  HREF="node9.html">
+<IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
+<A NAME="tex2html419"
+  HREF="node22.html">
+<IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
+<A NAME="tex2html427"
+  HREF="node1.html">
+<IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
+<BR>
+<B> Next:</B> <A NAME="tex2html430"
+  HREF="node24.html">Exporting sequences</A>
+<B> Up:</B> <A NAME="tex2html426"
+  HREF="node9.html">Using the MGX application</A>
+<B> Previous:</B> <A NAME="tex2html420"
+  HREF="node22.html">Assembling a metagenome or</A>
+ &nbsp; <B>  <A NAME="tex2html428"
+  HREF="node1.html">Contents</A></B> </DIV>
+<!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
