--- a/guide/node26.html
+++ b/guide/node26.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>Reference mapping</TITLE>
-<META NAME="description" CONTENT="Reference mapping">
+<TITLE>Uploading own files</TITLE>
+<META NAME="description" CONTENT="Uploading own files">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,8 +14,8 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
-<LINK REL="next" HREF="node29.html">
-<LINK REL="previous" HREF="node25.html">
+<LINK REL="next" HREF="node27.html">
+<LINK REL="previous" HREF="node23.html">
 <LINK REL="up" HREF="node9.html">
 <LINK REL="next" HREF="node27.html">
 </HEAD>
@@ -23,50 +23,72 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html464"
+<A NAME="tex2html465"
   HREF="node27.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html460"
+<A NAME="tex2html461"
   HREF="node9.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html454"
+<A NAME="tex2html455"
   HREF="node25.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html462"
+<A NAME="tex2html463"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html465"
-  HREF="node27.html">Importing reference genomes</A>
-<B> Up:</B> <A NAME="tex2html461"
+<B> Next:</B> <A NAME="tex2html466"
+  HREF="node27.html">Reference mapping</A>
+<B> Up:</B> <A NAME="tex2html462"
   HREF="node9.html">Using the MGX application</A>
-<B> Previous:</B> <A NAME="tex2html455"
-  HREF="node25.html">Uploading own files</A>
- &nbsp; <B>  <A NAME="tex2html463"
+<B> Previous:</B> <A NAME="tex2html456"
+  HREF="node25.html">Biodiversity indices</A>
+ &nbsp; <B>  <A NAME="tex2html464"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION003110000000000000000">
-Reference mapping</A>
+Uploading own files</A>
 </H1>
 
 <P>
-<BR><HR>
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsections</STRONG></A>
+For each project, MGX provides dedicated storage (<A HREF="#serverfs">2.30</A>) in order to allow users to
+provide custom data, subsequently to be used with analysis pipelines. Thus,
+own sequence collections or HMM model files for genes of interest can easily
+be uploaded and later on be included into analysis pipelines.
+<BR>
+<P>
 
-<UL CLASS="ChildLinks">
-<LI><A NAME="tex2html466"
-  HREF="node27.html">Importing reference genomes</A>
-<LI><A NAME="tex2html467"
-  HREF="node28.html">Displaying reference mappings</A>
-</UL>
-<!--End of Table of Child-Links-->
+<DIV ALIGN="CENTER"><A NAME="serverfs"></A><A NAME="364"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 2.30:</STRONG>
+Each project includes flat storage where custom
+data can be stored, e.g. own FASTA files to be used as reference databases
+for metagenome analysis.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="233" HEIGHT="150" ALIGN="BOTTOM" BORDER="0"
+ SRC="./serverfs.png"
+ ALT="Image serverfs"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+While it may be necessary to implement an own pipeline depending on the
+desired kind of analysis, the MGX repository hosts predefined pipeline
+templates addressing the most common cases: The &ldquo;BestHit-Blast&rdquo; template
+can be used to annotate metagenome sequences with the description of a
+Blast hit after the user has uploaded a FASTA file containing amino acid
+sequences, and the &ldquo;BestHit-HMM&rdquo; template provides the same functionality
+for hidden Markov models (HMMs).
+
+<P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
