--- a/guide/node33.html
+++ b/guide/node33.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>Annotating metagenome sequences</TITLE>
-<META NAME="description" CONTENT="Annotating metagenome sequences">
+<TITLE>Workflow requirements</TITLE>
+<META NAME="description" CONTENT="Workflow requirements">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -14,194 +14,140 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
+<LINK REL="next" HREF="node34.html">
 <LINK REL="previous" HREF="node32.html">
-<LINK REL="up" HREF="node30.html">
+<LINK REL="up" HREF="node31.html">
 <LINK REL="next" HREF="node34.html">
 </HEAD>
 
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html548"
+<A NAME="tex2html551"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html544"
-  HREF="node30.html">
+<A NAME="tex2html547"
+  HREF="node31.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html540"
+<A NAME="tex2html541"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html546"
+<A NAME="tex2html549"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html549"
-  HREF="node34.html">Creating hierarchical attributes</A>
-<B> Up:</B> <A NAME="tex2html545"
-  HREF="node30.html">Implementing custom analysis pipelines</A>
-<B> Previous:</B> <A NAME="tex2html541"
-  HREF="node32.html">Workflow requirements</A>
- &nbsp; <B>  <A NAME="tex2html547"
+<B> Next:</B> <A NAME="tex2html552"
+  HREF="node34.html">Annotating metagenome sequences</A>
+<B> Up:</B> <A NAME="tex2html548"
+  HREF="node31.html">Implementing custom analysis pipelines</A>
+<B> Previous:</B> <A NAME="tex2html542"
+  HREF="node32.html">Getting started</A>
+ &nbsp; <B>  <A NAME="tex2html550"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 
-<H1><A NAME="SECTION00430000000000000000">
-Annotating metagenome sequences</A>
+<H1><A NAME="SECTION00420000000000000000">
+Workflow requirements</A>
 </H1>
 
 <P>
-
-<DIV ALIGN="CENTER"><A NAME="annot"></A><A NAME="861"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.7:</STRONG>
-Basic template to illustrate sequence annotation. A <TT>StringGenerator</TT> is
-used to generate a label for the attribute type (<TT>CreateMGXAttributeType</TT>), which also requires job context
-information. The attribute type is required to create attributes, thus the node is connected to the <TT>CreateMGXAttribute</TT> node. Finally, the annotation can be saved to the project database (<TT>AnnotateAttribute</TT> node).</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="737" HEIGHT="253" ALIGN="BOTTOM" BORDER="0"
- SRC="./annotate_templ.png"
- ALT="Image annotate_templ"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-Annotation of metagenome sequences requires an &ldquo;attribute type&rdquo; and an &ldquo;attribute&rdquo;. As an example, we will
-illustrate the implementation of a pipeline for the analysis of GC content within metagenome sequences.
-We use a <TT>StringGenerator</TT> node configured to generate the string &ldquo;GC&rdquo; to create a label for the
-attribute type. As GC content is indicated by a number, we appropriately configure the <TT>CreateMGXAttributeType</TT>
-node to emit a <SPAN  CLASS="textbf">basic</SPAN> (i.e. not hierarchical) as well as numerical &ldquo;attribute type&rdquo; (<A HREF="#createattrtype">3.8</A>).
-
-<P>
-
-<DIV ALIGN="CENTER"><A NAME="createattrtype"></A><A NAME="862"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.8:</STRONG>
-Within the configuration dialog for the <TT>CreateMGXAttributeType</TT> node, structure and type of the generated attribute values are defined.</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="323" HEIGHT="434" ALIGN="BOTTOM" BORDER="0"
- SRC="./createattrtype.png"
- ALT="Image createattrtype"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-
-<DIV ALIGN="CENTER"><A NAME="annot2"></A><A NAME="863"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.9:</STRONG>
-Incomplete example; extending upon <A HREF="#annot">3.7</A>, the <TT>ReadCSF</TT> node will
-provide the necessary metagenome sequences to be annotated. Still, there is no actual analysis specified.</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="747" HEIGHT="263" ALIGN="BOTTOM" BORDER="0"
- SRC="./annotate_templ2.png"
- ALT="Image annotate_templ2"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-In a second step, we use the <TT>ReadCSF</TT> node to obtain access to the individual metagenome sequences; as 
-MGX annotates sequences individually, a connection between <TT>ReadCSF</TT> and <TT>AnnotateAttribute</TT> is
-required (<A HREF="#annot2">3.9</A>). Subsequently, we implement the actual analysis, which is provided by the <TT>GCContent</TT>
-node. It will process all sequences and emit the corresponding GC content for each of them. To convert these values to
-appropriate &ldquo;attributes&rdquo;, an &ldquo;attribute type&rdquo; is required for each value; therefore, a <TT>Repeat</TT>
-node is inserted between nodes 5 and 7 (<A HREF="#annot3">3.10</A>).
-
-<P>
-
-<DIV ALIGN="CENTER"><A NAME="annot3"></A><A NAME="864"></A>
-<TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.10:</STRONG>
-Step 2: The <TT>GCContent</TT> node represents the actual analysis step; it is used
-to determine the GC content of a DNA sequence, which will then be converted into an &ldquo;attribute&rdquo;. Since an 
-&ldquo;attribute type&rdquo; is required for each &ldquo;attribute&rdquo;, a <TT>Repeat</TT> node is inserted between nodes 5 and 7.</CAPTION>
-<TR><TD>
-<DIV ALIGN="CENTER">
-
-</DIV><IMG
-  WIDTH="741" HEIGHT="366" ALIGN="BOTTOM" BORDER="0"
- SRC="./annotate_templ3.png"
- ALT="Image annotate_templ3"></TD></TR>
-</TABLE>
-</DIV>
-
-<P>
-Finally, as an annotation always refers to only a part of a sequence, we will need to generate the corresponding
-start and end coordinates; since GC content refers to the full sequence, we can use an <TT>ULongGenerator</TT> node
-configured to emit 0 (MGX uses 0-based coordinates) to generate the start coordinate; this node needs to be connected to
-a <TT>Repeat</TT> node to generate a series of 0s.
+In order to design custom Conveyor workflows for later usage within the MGX platform, there
+are several constraints to be met which will be described in more detail.
 <BR>
-The end coordinate can be created based on the sequences' length, with 1 subtracted, obtained through the
-<TT>GetLength</TT> and <TT>MinusOne</TT> nodes (<A HREF="#annot4">3.11</A>).
+<P>
+First of all, a dedicated <TT>GetMGXJob</TT> node (Figure <A HREF="#getmgxjob">3.4</A>) has to be present within the workflow; in addition,
+this node has to be named "<SPAN  CLASS="textbf">mgx</SPAN>". During execution of a pipeline within MGX, this node is
+configured via an external configuration file, providing required information about a jobs
+context, like e.g. access to a project database and associated storage.
 <BR>
-The <TT>GetMGXJob</TT> node will retain its red border due to missing configuration; this, however, can be
-ignored, as appropriate configuration will be provided by the MGX framework automatically.
-
 <P>
 
-<DIV ALIGN="CENTER"><A NAME="annot4"></A><A NAME="865"></A>
+<DIV ALIGN="CENTER"><A NAME="getmgxjob"></A><A NAME="863"></A>
 <TABLE>
-<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.11:</STRONG>
-Completing the workflow: the <TT>ULongGenerator</TT> and <TT>GetLength</TT> nodes
-are added to specify coordinates for the subregion of the DNA sequence described by the &ldquo;attribute&rdquo;; the
-start coordinate is simply repeated, while 1 is subtracted from the sequences length due to 0-based coordinates.</CAPTION>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.4:</STRONG>
+The <TT>GetMGXJob</TT> node provides necessary context for executing a
+workflow within MGX, such as database access. By convention, this node has to be named <SPAN  CLASS="textbf">mgx</SPAN>.</CAPTION>
 <TR><TD>
 <DIV ALIGN="CENTER">
 
 </DIV><IMG
-  WIDTH="936" HEIGHT="385" ALIGN="BOTTOM" BORDER="0"
- SRC="./annotate_templ4.png"
- ALT="Image annotate_templ4"></TD></TR>
+  WIDTH="158" HEIGHT="89" ALIGN="BOTTOM" BORDER="0"
+ SRC="./getjob.png"
+ ALT="Image getjob"></TD></TR>
 </TABLE>
 </DIV>
 
 <P>
-<BR><HR>
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsections</STRONG></A>
+Access to metagenome DNA sequences is provided via the <TT>ReadCSF</TT> node, which will provide
+all metagenome sequences for a sequencing run object within MGX, except those for which the 
+&ldquo;discard&rdquo; flag has already been set. As pipelines are always executed
+for one single analysis job, this node needs to be connected to the <TT>GetMGXJob</TT> node (<A HREF="#readcsf">3.5</A>).
+Figure <A HREF="#simple">3.6</A> shows a minimal example of a Conveyor-based pipeline for use within the MGX framework.
+Once executed, the pipeline would set the <SPAN  CLASS="textit">discard</SPAN> flag for all sequences.
 
-<UL CLASS="ChildLinks">
-<LI><A NAME="tex2html550"
-  HREF="node34.html">Creating hierarchical attributes</A>
-</UL>
-<!--End of Table of Child-Links-->
+<P>
+
+<DIV ALIGN="CENTER"><A NAME="readcsf"></A><A NAME="864"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.5:</STRONG>
+The <TT>ReadCSF</TT> node is used to obtained metagenome sequence data 
+from within MGX; it has one input and needs to be connected to the <TT>GetMGXJob</TT> node.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="378" HEIGHT="92" ALIGN="BOTTOM" BORDER="0"
+ SRC="./getjobreadcsf.png"
+ ALT="Image getjobreadcsf"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
+
+<DIV ALIGN="CENTER"><A NAME="simple"></A><A NAME="865"></A>
+<TABLE>
+<CAPTION ALIGN="BOTTOM"><STRONG>Figure 3.6:</STRONG>
+A minimal working example of a pipeline developed for MGX, which would set the <SPAN  CLASS="textit">discard</SPAN> flag for all sequences.</CAPTION>
+<TR><TD>
+<DIV ALIGN="CENTER">
+
+</DIV><IMG
+  WIDTH="613" HEIGHT="90" ALIGN="BOTTOM" BORDER="0"
+ SRC="./simple.png"
+ ALT="Image simple"></TD></TR>
+</TABLE>
+</DIV>
+
+<P>
 
 <DIV CLASS="navigation"><HR>
 <!--Navigation Panel-->
-<A NAME="tex2html548"
+<A NAME="tex2html551"
   HREF="node34.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html544"
-  HREF="node30.html">
+<A NAME="tex2html547"
+  HREF="node31.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html540"
+<A NAME="tex2html541"
   HREF="node32.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html546"
+<A NAME="tex2html549"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html549"
-  HREF="node34.html">Creating hierarchical attributes</A>
-<B> Up:</B> <A NAME="tex2html545"
-  HREF="node30.html">Implementing custom analysis pipelines</A>
-<B> Previous:</B> <A NAME="tex2html541"
-  HREF="node32.html">Workflow requirements</A>
- &nbsp; <B>  <A NAME="tex2html547"
+<B> Next:</B> <A NAME="tex2html552"
+  HREF="node34.html">Annotating metagenome sequences</A>
+<B> Up:</B> <A NAME="tex2html548"
+  HREF="node31.html">Implementing custom analysis pipelines</A>
+<B> Previous:</B> <A NAME="tex2html542"
+  HREF="node32.html">Getting started</A>
+ &nbsp; <B>  <A NAME="tex2html550"
   HREF="node1.html">Contents</A></B> </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
