--- a/guide/node36.html
+++ b/guide/node36.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>List of Figures</TITLE>
-<META NAME="description" CONTENT="List of Figures">
+<TITLE>Bibliography</TITLE>
+<META NAME="description" CONTENT="Bibliography">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -15,7 +15,7 @@
 <LINK REL="STYLESHEET" HREF="main.css">
 
 <LINK REL="next" HREF="node37.html">
-<LINK REL="previous" HREF="node35.html">
+<LINK REL="previous" HREF="node31.html">
 <LINK REL="up" HREF="main.html">
 <LINK REL="next" HREF="node37.html">
 </HEAD>
@@ -23,132 +23,98 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html583"
+<A NAME="tex2html584"
   HREF="node37.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html579"
+<A NAME="tex2html580"
   HREF="main.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html573"
+<A NAME="tex2html574"
   HREF="node35.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html581"
+<A NAME="tex2html582"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html584"
-  HREF="node37.html">List of Tables</A>
-<B> Up:</B> <A NAME="tex2html580"
+<B> Next:</B> <A NAME="tex2html585"
+  HREF="node37.html">List of Figures</A>
+<B> Up:</B> <A NAME="tex2html581"
   HREF="main.html">MGX User Guide</A>
-<B> Previous:</B> <A NAME="tex2html574"
-  HREF="node35.html">Bibliography</A>
- &nbsp; <B>  <A NAME="tex2html582"
+<B> Previous:</B> <A NAME="tex2html575"
+  HREF="node35.html">Creating hierarchical attributes</A>
+ &nbsp; <B>  <A NAME="tex2html583"
   HREF="node1.html">Contents</A></B> 
-<BR>
-<BR></DIV>
+<BR><BR></DIV>
 <!--End of Navigation Panel-->
-<BR>
 
-<H2><A NAME="SECTION00600000000000000000">
-List of Figures</A>
-</H2><OL>
-<LI><A NAME="tex2html4"
-  HREF="node14.html#172">MGX client</A>
-<LI><A NAME="tex2html5"
-  HREF="node14.html#178">Server configuration</A>
-<LI><A NAME="tex2html6"
-  HREF="node14.html#183">Login screen</A>
-<LI><A NAME="tex2html7"
-  HREF="node14.html#189">Project Explorer</A>
-<LI><A NAME="tex2html8"
-  HREF="node14.html#194">Project structure</A>
-<LI><A NAME="tex2html9"
-  HREF="node15.html#204">Habitat creation</A>
-<LI><A NAME="tex2html10"
-  HREF="node15.html#209">Habitat wizard</A>
-<LI><A NAME="tex2html11"
-  HREF="node16.html#215">Sample wizard</A>
-<LI><A NAME="tex2html12"
-  HREF="node16.html#220">Sample wizard</A>
-<LI><A NAME="tex2html13"
-  HREF="node16.html#225">DNA extract wizard</A>
-<LI><A NAME="tex2html14"
-  HREF="node16.html#230">DNA extract wizard</A>
-<LI><A NAME="tex2html15"
-  HREF="node17.html#236">Sequence import</A>
-<LI><A NAME="tex2html16"
-  HREF="node17.html#241">Sequence import</A>
-<LI><A NAME="tex2html17"
-  HREF="node18.html#247">Quality control</A>
-<LI><A NAME="tex2html19"
-  HREF="node18.html#256">Quality control</A>
-<LI><A NAME="tex2html20"
-  HREF="node18.html#261">Quality control</A>
-<LI><A NAME="tex2html21"
-  HREF="node18.html#266">Quality control</A>
-<LI><A NAME="tex2html22"
-  HREF="node18.html#285">Nucleotide distribution examples.</A>
-<LI><A NAME="tex2html23"
-  HREF="node20.html#293">Analysis selection</A>
-<LI><A NAME="tex2html24"
-  HREF="node20.html#300">Analysis parameters</A>
-<LI><A NAME="tex2html25"
-  HREF="node20.html#305">Parameter overview</A>
-<LI><A NAME="tex2html26"
-  HREF="node21.html#311">Job monitor</A>
-<LI><A NAME="tex2html27"
-  HREF="node21.html#316">Job monitor</A>
-<LI><A NAME="tex2html28"
-  HREF="node22.html#324">Visualization</A>
-<LI><A NAME="tex2html29"
-  HREF="node22.html#329">Visualization components</A>
-<LI><A NAME="tex2html30"
-  HREF="node22.html#336">Visualization example</A>
-<LI><A NAME="tex2html31"
-  HREF="node22.html#405">Job selection</A>
-<LI><A NAME="tex2html32"
-  HREF="node23.html#350">Exporting sequences</A>
-<LI><A NAME="tex2html33"
-  HREF="node24.html#357">Biodiversity</A>
-<LI><A NAME="tex2html34"
-  HREF="node25.html#368">File storage</A>
-<LI><A NAME="tex2html35"
-  HREF="node27.html#375">Reference import</A>
-<LI><A NAME="tex2html36"
-  HREF="node28.html#382">Reference mapping</A>
-<LI><A NAME="tex2html37"
-  HREF="node28.html#406">Fragment recruitment</A>
-<LI><A NAME="tex2html38"
-  HREF="node29.html#396">Metagenome search</A>
-<LI><A NAME="tex2html39"
-  HREF="node29.html#401">Metagenome search</A>
-<LI><A NAME="tex2html40"
-  HREF="node30.html#735">Conveyor Designer</A>
-<LI><A NAME="tex2html42"
-  HREF="node31.html#743">Obtaining a plugin dump file.</A>
-<LI><A NAME="tex2html43"
-  HREF="node31.html#749">Adding a new provider.</A>
-<LI><A NAME="tex2html44"
-  HREF="node32.html#858"><TT>GetMGXJob</TT></A>
-<LI><A NAME="tex2html45"
-  HREF="node32.html#859"><TT>ReadCSF</TT></A>
-<LI><A NAME="tex2html46"
-  HREF="node32.html#860">Minimal example</A>
-<LI><A NAME="tex2html47"
-  HREF="node33.html#861">Metagenome annotation</A>
-<LI><A NAME="tex2html48"
-  HREF="node33.html#862">Defining an attribute type.</A>
-<LI><A NAME="tex2html49"
-  HREF="node33.html#863">Metagenome annotation</A>
-<LI><A NAME="tex2html50"
-  HREF="node33.html#864">Metagenome annotation</A>
-<LI><A NAME="tex2html51"
-  HREF="node33.html#865">Metagenome annotation</A>
-<LI><A NAME="tex2html52"
-  HREF="node34.html#866">Hierarchical attributes</A></OL>
+<H2><A NAME="SECTION00500000000000000000">
+Bibliography</A>
+</H2><DL COMPACT><DD><P></P><DT><A NAME="BLAST">Altschul et&nbsp;al., 1990</A>
+<DD>
+Altschul, S.&nbsp;F., Gish, W., Miller, W., Myers, E.&nbsp;W., and Lipman, D.&nbsp;J. (1990).
+<BR>Basic local alignment search tool.
+<BR><EM>Journal of molecular biology</EM>, 215(3):403-410.
+
+<P></P><DT><A NAME="DIVERSITY">Hughes et&nbsp;al., 2002</A>
+<DD>
+Hughes, J.&nbsp;B., Hellmann, J.&nbsp;J., Ricketts, T.&nbsp;H., and Bohannan, B.&nbsp;J. (2002).
+<BR>Counting the uncountable: Statistical approaches to estimating
+  microbial diversity.
+<BR><EM>Applied and environmental microbiology</EM>, 68(1):448.
+
+<P></P><DT><A NAME="BOWTIE">Langmead and Salzberg, 2012</A>
+<DD>
+Langmead, B. and Salzberg, S.&nbsp;L. (2012).
+<BR>Fast gapped-read alignment with Bowtie 2.
+<BR><EM>Nature Methods</EM>, 9(4):357-359.
+
+<P></P><DT><A NAME="CONVEYOR">Linke et&nbsp;al., 2011</A>
+<DD>
+Linke, B., Giegerich, R., and Goesmann, A. (2011).
+<BR>Conveyor: a workflow engine for bioinformatic analyses.
+<BR><EM>Bioinformatics</EM>, 27(7):903-911.
+
+<P></P><DT><A NAME="METACV">Liu et&nbsp;al., 2012</A>
+<DD>
+Liu, J., Wang, H., Yang, H., Zhang, Y., Wang, J., Zhao, F., and Qi, J. (2012).
+<BR>Composition-based classification of short metagenomic sequences
+  elucidates the landscapes of taxonomic and functional enrichment of
+  microorganisms.
+<BR><EM>Nucleic Acids Research</EM>, page gks828.
+
+<P></P><DT><A NAME="FRHIT">Niu et&nbsp;al., 2011</A>
+<DD>
+Niu, B., Zhu, Z., Fu, L., Wu, S., and Li, W. (2011).
+<BR>FR-HIT, a very fast program to recruit metagenomic reads to
+  homologous reference genomes.
+<BR><EM>Bioinformatics</EM>, 27(12):1704-1705.
+
+<P></P><DT><A NAME="SIMPSON">Simpson, 1949</A>
+<DD>
+Simpson, E.&nbsp;H. (1949).
+<BR>Measurement of diversity.
+<BR><EM>Nature</EM>.
+
+<P></P><DT><A NAME="SHANNON">Spellerberg and Fedor, 2003</A>
+<DD>
+Spellerberg, I.&nbsp;F. and Fedor, P.&nbsp;J. (2003).
+<BR>A tribute to Claude Shannon (1916-2001) and a plea for more
+  rigorous use of species richness, species diversity and the Shannon-Wiener
+  Index.
+<BR><EM>Global ecology and biogeography</EM>, 12(3):177-179.
+
+<P></P><DT><A NAME="KRAKEN">Wood and Salzberg, 2014</A>
+<DD>
+Wood, D. and Salzberg, S. (2014).
+<BR>Kraken: ultrafast metagenomic sequence classification using exact
+  alignments.
+<BR><EM>Genome Biol</EM>, 15(3):R46.
+</DL>
+
+<P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
