--- a/guide/node37.html
+++ b/guide/node37.html
@@ -3,8 +3,8 @@
 <!--Converted with LaTeX2HTML 2018 (Released Feb 1, 2018) -->
 <HTML>
 <HEAD>
-<TITLE>List of Tables</TITLE>
-<META NAME="description" CONTENT="List of Tables">
+<TITLE>List of Figures</TITLE>
+<META NAME="description" CONTENT="List of Figures">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -23,39 +23,132 @@
 <BODY >
 
 <DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html595"
+<A NAME="tex2html596"
   HREF="node38.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html591"
+<A NAME="tex2html592"
   HREF="main.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html585"
+<A NAME="tex2html586"
   HREF="node36.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html593"
+<A NAME="tex2html594"
   HREF="node1.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  
 <BR>
-<B> Next:</B> <A NAME="tex2html596"
-  HREF="node38.html">About this document ...</A>
-<B> Up:</B> <A NAME="tex2html592"
+<B> Next:</B> <A NAME="tex2html597"
+  HREF="node38.html">List of Tables</A>
+<B> Up:</B> <A NAME="tex2html593"
   HREF="main.html">MGX User Guide</A>
-<B> Previous:</B> <A NAME="tex2html586"
-  HREF="node36.html">List of Figures</A>
- &nbsp; <B>  <A NAME="tex2html594"
+<B> Previous:</B> <A NAME="tex2html587"
+  HREF="node36.html">Bibliography</A>
+ &nbsp; <B>  <A NAME="tex2html595"
   HREF="node1.html">Contents</A></B> 
 <BR>
 <BR></DIV>
 <!--End of Navigation Panel-->
 <BR>
 
-<H2><A NAME="SECTION00700000000000000000">
-List of Tables</A>
-</H2>
-<P>
+<H2><A NAME="SECTION00600000000000000000">
+List of Figures</A>
+</H2><OL>
+<LI><A NAME="tex2html3"
+  HREF="node14.html#166">MGX client</A>
+<LI><A NAME="tex2html4"
+  HREF="node14.html#172">Server configuration</A>
+<LI><A NAME="tex2html5"
+  HREF="node14.html#177">Login screen</A>
+<LI><A NAME="tex2html6"
+  HREF="node14.html#183">Project Explorer</A>
+<LI><A NAME="tex2html7"
+  HREF="node14.html#188">Project structure</A>
+<LI><A NAME="tex2html8"
+  HREF="node15.html#198">Habitat creation</A>
+<LI><A NAME="tex2html9"
+  HREF="node15.html#203">Habitat wizard</A>
+<LI><A NAME="tex2html10"
+  HREF="node16.html#209">Sample wizard</A>
+<LI><A NAME="tex2html11"
+  HREF="node16.html#214">Sample wizard</A>
+<LI><A NAME="tex2html12"
+  HREF="node16.html#219">DNA extract wizard</A>
+<LI><A NAME="tex2html13"
+  HREF="node16.html#224">DNA extract wizard</A>
+<LI><A NAME="tex2html14"
+  HREF="node17.html#401">Sequence import</A>
+<LI><A NAME="tex2html15"
+  HREF="node17.html#238">Sequence import</A>
+<LI><A NAME="tex2html16"
+  HREF="node18.html#244">Quality control</A>
+<LI><A NAME="tex2html17"
+  HREF="node18.html#250">Quality control</A>
+<LI><A NAME="tex2html18"
+  HREF="node18.html#255">Quality control</A>
+<LI><A NAME="tex2html19"
+  HREF="node18.html#260">Quality control</A>
+<LI><A NAME="tex2html20"
+  HREF="node18.html#279">Nucleotide distribution examples.</A>
+<LI><A NAME="tex2html21"
+  HREF="node20.html#288">Analysis selection</A>
+<LI><A NAME="tex2html22"
+  HREF="node20.html#295">Analysis parameters</A>
+<LI><A NAME="tex2html23"
+  HREF="node20.html#300">Parameter overview</A>
+<LI><A NAME="tex2html24"
+  HREF="node21.html#306">Job monitor</A>
+<LI><A NAME="tex2html25"
+  HREF="node21.html#311">Job monitor</A>
+<LI><A NAME="tex2html26"
+  HREF="node23.html#320">Visualization</A>
+<LI><A NAME="tex2html27"
+  HREF="node23.html#325">Visualization components</A>
+<LI><A NAME="tex2html28"
+  HREF="node23.html#332">Visualization example</A>
+<LI><A NAME="tex2html29"
+  HREF="node23.html#402">Job selection</A>
+<LI><A NAME="tex2html30"
+  HREF="node24.html#346">Exporting sequences</A>
+<LI><A NAME="tex2html31"
+  HREF="node25.html#353">Biodiversity</A>
+<LI><A NAME="tex2html32"
+  HREF="node26.html#364">File storage</A>
+<LI><A NAME="tex2html33"
+  HREF="node28.html#371">Reference import</A>
+<LI><A NAME="tex2html34"
+  HREF="node29.html#378">Reference mapping</A>
+<LI><A NAME="tex2html35"
+  HREF="node29.html#403">Fragment recruitment</A>
+<LI><A NAME="tex2html36"
+  HREF="node30.html#392">Metagenome search</A>
+<LI><A NAME="tex2html37"
+  HREF="node30.html#397">Metagenome search</A>
+<LI><A NAME="tex2html38"
+  HREF="node31.html#740">Conveyor Designer</A>
+<LI><A NAME="tex2html40"
+  HREF="node32.html#748">Obtaining a plugin dump file.</A>
+<LI><A NAME="tex2html41"
+  HREF="node32.html#754">Adding a new provider.</A>
+<LI><A NAME="tex2html42"
+  HREF="node33.html#863"><TT>GetMGXJob</TT></A>
+<LI><A NAME="tex2html43"
+  HREF="node33.html#864"><TT>ReadCSF</TT></A>
+<LI><A NAME="tex2html44"
+  HREF="node33.html#865">Minimal example</A>
+<LI><A NAME="tex2html45"
+  HREF="node34.html#866">Metagenome annotation</A>
+<LI><A NAME="tex2html46"
+  HREF="node34.html#867">Defining an attribute type.</A>
+<LI><A NAME="tex2html47"
+  HREF="node34.html#868">Metagenome annotation</A>
+<LI><A NAME="tex2html48"
+  HREF="node34.html#869">Metagenome annotation</A>
+<LI><A NAME="tex2html49"
+  HREF="node34.html#870">Metagenome annotation</A>
+<LI><A NAME="tex2html50"
+  HREF="node35.html#871">Hierarchical attributes</A></OL>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
