--- a/guide/node9.html
+++ b/guide/node9.html
@@ -14,7 +14,7 @@
 
 <LINK REL="STYLESHEET" HREF="main.css">
 
-<LINK REL="next" HREF="node30.html">
+<LINK REL="next" HREF="node31.html">
 <LINK REL="previous" HREF="node2.html">
 <LINK REL="up" HREF="main.html">
 <LINK REL="next" HREF="node10.html">
@@ -94,32 +94,34 @@ Using the MGX application
 </UL>
 <BR>
 <LI><A NAME="tex2html256"
-  HREF="node22.html">Visualization of results</A>
-<UL>
+  HREF="node22.html">Assembling a metagenome or metatranscriptome</A>
 <LI><A NAME="tex2html257"
-  HREF="node23.html">Exporting sequences</A>
-<LI><A NAME="tex2html258"
-  HREF="node24.html">Biodiversity indices</A>
-</UL>
-<BR>
-<LI><A NAME="tex2html259"
-  HREF="node25.html">Uploading own files</A>
-<LI><A NAME="tex2html260"
-  HREF="node26.html">Reference mapping</A>
+  HREF="node23.html">Visualization of results</A>
 <UL>
-<LI><A NAME="tex2html261"
-  HREF="node27.html">Importing reference genomes</A>
-<LI><A NAME="tex2html262"
-  HREF="node28.html">Displaying reference mappings</A>
+<LI><A NAME="tex2html258"
+  HREF="node24.html">Exporting sequences</A>
+<LI><A NAME="tex2html259"
+  HREF="node25.html">Biodiversity indices</A>
 </UL>
 <BR>
+<LI><A NAME="tex2html260"
+  HREF="node26.html">Uploading own files</A>
+<LI><A NAME="tex2html261"
+  HREF="node27.html">Reference mapping</A>
+<UL>
+<LI><A NAME="tex2html262"
+  HREF="node28.html">Importing reference genomes</A>
 <LI><A NAME="tex2html263"
-  HREF="node29.html">Search</A>
+  HREF="node29.html">Displaying reference mappings</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html264"
+  HREF="node30.html">Search</A>
 </UL>
 <!--End of Table of Child-Links-->
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2020-04-28
+Sebastian Jaenicke, 2024-02-18
 </ADDRESS>
 </BODY>
 </HTML>
